src/objects/booking__BBQuestions__c.object
<CustomObject>
    <fields>
        <fullName>booking__Answer_ID__c</fullName>
        <label>Answer_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Id__c</fullName>
        <description>The Foreign ID field from BB.</description>
        <externalId>true</externalId>
        <label>BookingBug ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>booking__Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>booking__BBBookings__c</referenceTo>
        <relationshipLabel>BBQuestions</relationshipLabel>
        <relationshipName>BBQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>booking__Foreign_ID__c</fullName>
        <label>Foreign ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BBMember</label>
        <referenceTo>booking__BBMember__c</referenceTo>
        <relationshipLabel>BBQuestions</relationshipLabel>
        <relationshipName>BBQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>booking__Question_ID__c</fullName>
        <label>Question ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Question_Type__c</fullName>
        <label>Question Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BBQuestion</label>
    <listViews>
        <fullName>booking__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>booking__Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BBQuestions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>